<resources>
    <string name="app_name">MyApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="reset">Reset Password</string>
    <string name="enter_email">Enter Email</string>
</resources>
